Hide open graph image, for now.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 permalink: pretty
+
+description: I’m Jim, an indie front end developer. If you’re making a user interface for the web, I can assist with prototypes, responsive design & reusable patterns. You can hire me!
