--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
 permalink: pretty
 
-layout: default
-
 description: I’m Jim, an indie front end developer. If you’re making a user interface for the web, I can assist with prototypes, responsive design & reusable patterns. You can hire me!
+
+defaults:
+  - scope:
+      path: ""
+    values:
+      layout: default
