--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browser-sync": "^2.18.13",
     "concurrent-transform": "^1.0.0",
     "gulp": "^3.9.1",
-    "gulp-image-resize": "^0.12.0"
+    "gulp-image-resize": "^0.12.0",
+    "gm": "^1.23.1"
   }
 }
