--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,19 @@
-permalink: pretty
-
-description: I’m Jim, an indie front end developer. If you’re making a user interface for the web, I can assist with prototypes, responsive design & reusable patterns. You can hire me!
-
+---
+title: Goldhirsh Foundation
+timezone: America/Los_Angeles
+collections:
+  posts:
+    title: Writing
+    output: true
 defaults:
-  - scope:
-      path: ""
-    values:
-      layout: default
+- scope:
+    path: ''
+  values:
+    layout: default
+- scope:
+    path: ''
+    type: posts
+  values:
+    layout: post
+    permalink: /:title
+permalink: pretty
