--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/jimthoburn/tobbi.co#readme",
   "devDependencies": {
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.26.7",
     "concurrent-transform": "^1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-image-resize": "^0.12.0",
-    "gm": "^1.23.1"
+    "gm": "^1.23.1",
+    "gulp": "^4.0.2",
+    "gulp-image-resize": "^0.13.1"
   }
 }
