--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -33,6 +33,10 @@ jobs:
       - name: Setup Ruby
         # https://github.com/ruby/setup-ruby/releases/tag/v1.220.0
         uses: ruby/setup-ruby@28d088d34a0b0b7ba0823b7952c77004560a3a6f
+        with:
+          ruby-version: '3.4.2' # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
